[package]
name = "deezer-isrc-tagger"
version = "0.1.2"
edition = "2021"
authors = ["xNyaDev <xnyadev@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xNyaDev/deezer-isrc-tagger/"
homepage = "https://github.com/xNyaDev/deezer-isrc-tagger/"
description = "Tag songs based on their ISRC using Deezer API"
categories = ["command-line-utilities"]
keywords = ["deezer", "tagging", "isrc"]

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dialoguer = "0.11.0"
lofty = "0.17.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde-aux = "4.3.1"
serde_json = "1.0.108"
urlencoding = "2.1.3"

[build-dependencies]
tauri-winres = "0.1.1"

[package.metadata.tauri-winres]
OriginalFilename = "deezer-isrc-tagger.exe"
FileDescription = "deezer-isrc-tagger.exe"
LegalCopyright = "Licensed under MIT or Apache-2.0, xNyaDev 2023"